:bug: fix input overflowing

--- a/src/components/atoms/textfield/textfield.module.scss
+++ b/src/components/atoms/textfield/textfield.module.scss
@@ -3,6 +3,7 @@
 .inputFlex {
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
 
 .inputPrefix {
